--- a/views/index.erb
+++ b/views/index.erb
@@ -7,6 +7,16 @@
     <title><%= @title %></title>
   </head>
   <body>
-    
+
+    <div>
+      <h1>Caesar Cipher</h1>
+        <form>
+           Enter word:
+          <input type="text" name="word">
+          Enter Shift Factor:
+          <input type="text" name="shift">
+          <input type="submit" value="Submit">
+        </form>
+    </div>
   </body>
 </html>
